very basic pulse channels working with sine waves